@@ -1,12 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-	<meta type="array">
-		<type>database</type>
-		<description>Language labels for database tables/fields belonging to extension 'context'</description>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="moduleFunction.tx_context_modfunc1">Context Oveview</label>
-		</languageKey>
-	</data>
-</T3locallang>
