@@ -1,3 +1,7 @@
+2013-11-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Removed unused locallang file, resolves #53568
+
 2013-05-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Verified compatibility with TYPO3 CMS 6.1, resolves #48577
